--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.548.0",
     "mysql2": "^3.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
